--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-title:              Peter
+title:              Peter Lin
 bio:                'Pharmacist x Data Scientist'
 description:        "Explore the Healthcare World with Data"
 reading_time:       true
