changed background pic to png

--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ bio:                'Pharmacist x Data Scientist'
 description:        "Explore the Healthcare World with Data"
 reading_time:       true
 words_per_minute:   200
-logo:               'assets/img/UBC_20160906_6310.png'
-background:         'assets/img/IMG_7924.jpg'
+logo:               'assets/img/profile.png'
+background:         'assets/img/IMG_7924.png'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
 url:                https://peter0083.github.io/
