added a 531 lab report as a project

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              Peter Lin
 bio:                'Pharmacist x Data Scientist'
-description:        "Explore the Healthcare World with Data"
+description:        "Explore the World with Data"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/profile.png'
@@ -37,10 +37,10 @@ disqus_shortname:   peter0083
   #ad-client:
   #ad-slot:
 #bing-verify:
-#email:
+email:              peter.tingyao@alumni.ubc.ca
 twitter:            PTingyao
 facebook:           plin0083
-github-url:         https://github.com/peter0083
+github-url:         peter0083
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 linkedin:           peterlinmds
 #xing:              username
