removed instagram and FB from about

--- a/_config.yml
+++ b/_config.yml
@@ -39,12 +39,12 @@ disqus_shortname:   peter0083-github-io
 #bing-verify:
 email:              peter.tingyao@alumni.ubc.ca
 twitter:            PTingyao
-facebook:           plin0083
+facebook:           #plin0083
 github-url:         peter0083
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 linkedin:           peterlinmds
 #xing:              username
-instagram:          plin0083
+instagram:          #plin0083
 #lastfm:            username
 #tumblr:            username
 #medium:            '@username'
