--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ twitter:            PTingyao
 facebook:           #plin0083
 github-url:         peter0083
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
-linkedin:           peterlinmds
+linkedin:           peter0083
 #xing:              username
 instagram:          #plin0083
 #lastfm:            username
